@@ -22,7 +22,7 @@ package Net::FullAuto;
 #######################################################################
 
 
-our $VERSION='0.9999999992';
+our $VERSION='0.9999999993';
 
 
 use 5.005;
