@@ -22,6 +22,16 @@
 
 2014-07-29  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
 
+        * Version 0.9999999993 released.
+
+        * Minor change to new line padding in new user
+          experience.
+
+        * New version of Term::Menus paired with this release.
+
+
+2014-07-29  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
+
         * Version 0.9999999992 released.
 
         * Test Gzip Fix for Amazon RHEL.
